formulari escoles update insert

--- a/res/layout/form_escoles.xml
+++ b/res/layout/form_escoles.xml
@@ -62,6 +62,7 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:onClick="InserirEscola"
             android:text="Inserir" />
 
         <Button
@@ -69,6 +70,7 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:onClick="CancelarNovaEscola"
             android:text="Cancel·lar" />
 
     </LinearLayout>
