--- a/res/menu/main.xml
+++ b/res/menu/main.xml
@@ -8,12 +8,12 @@
     
     <item
         android:id="@+id/inserir_item"
-        android:showAsAction="always"
+        android:showAsAction="never"
         android:title="@string/inserir_item">
     </item>
     <item
         android:id="@+id/esborrar_item"
-        android:showAsAction="always"
+        android:showAsAction="never"
         android:title="@string/esborrar_item">
     </item>
 
