--- a/res/layout/form_vies.xml
+++ b/res/layout/form_vies.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
     android:orientation="vertical" >
 
     <ImageView
@@ -12,29 +12,30 @@
 
     <TextView
         android:id="@+id/lblNovaVia"
-        android:layout_width="match_parent"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:background="#7799dd"
         android:gravity="center|left"
         android:padding="5dp"
-        android:text="Nom via"
+        android:text="Nom de la via"
         android:textSize="15sp" />
 
     <EditText
         android:id="@+id/txtNomVia"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:ems="10" >
+        android:layout_height="wrap_content" >
+
     </EditText>
+
 	<RadioGroup
-  	   android:id="@+id/rgrpEspClas"
-	   android:layout_width="match_parent"
- 	   android:layout_height="wrap_content"
- 	   android:orientation="horizontal" >
+	    android:id="@+id/rgrpEspClas"
+	    android:layout_width="fill_parent"
+	    android:layout_height="wrap_content"
+	    android:orientation="horizontal" >
 
 	    <RadioButton
 	        android:id="@+id/radioEsp"
-	        android:layout_width="match_parent"
+	        android:layout_width="fill_parent"
 	        android:layout_height="wrap_content"
 	        android:layout_weight="1"
 	        android:checked="true"
@@ -42,7 +43,7 @@
 
 	    <RadioButton
 	        android:id="@+id/radioCla"
-	        android:layout_width="match_parent"
+	        android:layout_width="fill_parent"
 	        android:layout_height="wrap_content"
 	        android:layout_weight="1"
 	        android:text="Clàssica" />
@@ -51,7 +52,7 @@
 	
 	<TextView
 	    android:id="@+id/lblDescens"
-	    android:layout_width="match_parent"
+	    android:layout_width="fill_parent"
 	    android:layout_height="wrap_content"
 	    android:background="#7799dd"
 	    android:gravity="center|left"
@@ -62,9 +63,8 @@
 
     <EditText
         android:id="@+id/txtDescens"
-        android:layout_width="match_parent"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:ems="10"
         android:visibility="gone" >
 
  	</EditText>
@@ -75,7 +75,7 @@
 
 		<TextView
 		    android:id="@+id/lblGrau"
-		    android:layout_width="match_parent"
+		    android:layout_width="fill_parent"
 		    android:layout_height="wrap_content"
 		    android:layout_weight="1"
 		    android:background="#7799dd"
@@ -86,7 +86,7 @@
 
 		<EditText
 		    android:id="@+id/txtGrau"
-		    android:layout_width="match_parent"
+		    android:layout_width="fill_parent"
 		    android:layout_height="wrap_content"
 		    android:layout_weight="1"
 		    android:ems="10"
@@ -94,12 +94,12 @@
 
 		<CheckBox
 		    android:id="@+id/chkToprope"
-		    android:layout_width="match_parent"
+		    android:layout_width="fill_parent"
 		    android:layout_height="wrap_content"
 		    android:layout_gravity="right"
 		    android:layout_weight="0.7"
 		    android:checked="false"
-		    android:gravity="right|center_vertical|center|start"
+		    android:gravity="center_vertical"
 		    android:text="Top rope?" />
 
 	</LinearLayout>
@@ -110,7 +110,7 @@
 
 		<Spinner
 		    android:id="@+id/cmbOrientacio"
-		    android:layout_width="match_parent"
+		    android:layout_width="fill_parent"
 		    android:layout_height="wrap_content"
 		    android:layout_marginLeft="10dp"
 		    android:layout_weight="1"
@@ -118,19 +118,41 @@
 		    android:gravity="center"
 		    android:textAlignment="center" />
 
-		<RatingBar
-		    android:id="@+id/ratQualitat"
-		    style="@style/RatingBarPetit"
-		    android:layout_width="match_parent"
-		    android:layout_height="match_parent"
-		    android:layout_marginRight="10dp"
-		    android:layout_weight="1.7"
-		    android:max="5"
-		    android:numStars="5"
-		    android:stepSize="1"
-		    android:textAlignment="center" />
+		<LinearLayout
+		    android:layout_width="fill_parent"
+		    android:layout_height="wrap_content"
+		    android:layout_gravity="center_vertical|center"
+		    android:layout_weight="1"
+		    android:gravity="center"
+		    android:orientation="vertical" >
 
+			<RatingBar
+			    android:id="@+id/ratQualitat"
+			    style="@style/RatingBarPetit"
+			    android:layout_width="wrap_content"
+			    android:layout_height="fill_parent"
+			    android:layout_marginRight="10dp"
+			    android:layout_weight="1.7"
+			    android:minHeight="20dip"
+			    android:numStars="5"
+			    android:stepSize="1"
+			    android:textAlignment="center" />
+
+		</LinearLayout>
+	
 	</LinearLayout>
+
+	<Spinner
+	    android:id="@+id/frmViescmbEscola"
+	    android:layout_width="fill_parent"
+	    android:layout_height="wrap_content"
+	    android:layout_margin="5dp" />
+
+	<Spinner
+	    android:id="@+id/frmViescmbSector"
+	    android:layout_width="match_parent"
+	    android:layout_height="wrap_content"
+	    android:layout_margin="5dp" />
 
 	<LinearLayout
 	    android:layout_width="match_parent"
