gestio sectors sense editar formulari sectors

--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -35,7 +35,13 @@
                     android:layout_height="match_parent" 
                     android:orientation="vertical">
                 </LinearLayout>
-
+			
+                <LinearLayout
+                    android:id="@+id/TabSectors"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent" 
+                    android:orientation="vertical">
+                </LinearLayout>
                 
             </FrameLayout>
         </LinearLayout>
